2006-11-22 Benoit Grégoire  <bock@step.polymtl.ca>
	* Fix minor problems with template using obsolete constants
	* Delete a bunch of unused templates
	
2006-11-22 Benoit Grégoire  <bock@step.polymtl.ca>
	* Fix broken auth
	* Fix broken portal when called from gateway
	
2006-11-22 Benoit Grégoire  <bock@step.polymtl.ca>
	* Major schema update (this one is going to make your database grind for a while, sorry
	about that...)
	Fix a long standing design problem with the node table, where the ID could be changed.  
	This caused performance problems when replacing gateways, and caused problems when
	exporting data to other systems.  Among other things, it will allow us to finally
	 finish the JiWire output.
	* Stylesheet.php:  New content type.  Takes advantage of two pass content display to create stylesheets to be used only at a specific node, or with a specific content.
	
2006-11-21 Benoit Grégoire  <bock@step.polymtl.ca>
	* Change schema update method.  Will now do one transaction
	 per schema version, allowing each schema to assume that
	  the current schema is the previous one.  Also allows not
	  starting over when there is a problem.
	  Fixes schema update problems with the last commit
	
2006-11-21 Benoit Grégoire  <bock@step.polymtl.ca>
	* RssAggregator.php:  At long last, sync with FeedPressReview 2.0
	 http://projects.coeus.ca/feedpressreview/ (formerly rsspressreview)  and
	  make most of it's features directly available from the web interface.
	This gives us:  	
	-Now based on SimplePie http://simplepie.org/ (magpie was no longuer maintained)
	-Now unobtrusively displays almost all item and feed metadata
	-Supports images
	-Supports podcasts and enclosures
	-More accurate algorithm
	-Criteria based default feed expansion
	-More real-estate efficient, and improved UI
	The admin interface is now also more real-estate efficient (uses the hover help code commited by François that no one used yet).
	